--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="color-scheme" content="dark light">
+    <meta name="color-scheme" content="light dark">
     <title>Simple Clock</title>
 
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="img/icon-180x180.png" />
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="img/icon-180x180.png">
+
+    <meta name="theme-color" content="#eeeeee" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#111111" media="(prefers-color-scheme: dark)">
 
     <style>
       html {
