--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       function scheduleUpdate() {
         let t = 1000 - (new Date().getMilliseconds());
         if (t < 15) t+=1000;
-        setInterval(updateClock, t);
+        setTimeout(updateClock, t);
       }
 
       function updateClock() {
